[gd_scene load_steps=3 format=3 uid="uid://dbhvg24jk3sr"]

[ext_resource type="Script" uid="uid://c2pxk0uvrox3j" path="res://Managers/UI/UiManager.gd" id="1_jsen6"]
[ext_resource type="PackedScene" uid="uid://cvdk27u0hk664" path="res://Managers/UI/UiDock.tscn" id="2_4bcfh"]

[node name="UiManager" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_jsen6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="TopDock" parent="MarginContainer" instance=ExtResource("2_4bcfh")]
visible = false
layout_mode = 2
size_flags_vertical = 2

[node name="LeftDock" parent="MarginContainer" instance=ExtResource("2_4bcfh")]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="RightDock" parent="MarginContainer" instance=ExtResource("2_4bcfh")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="BottomDock" parent="MarginContainer" instance=ExtResource("2_4bcfh")]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
